--- a/fitness.html
+++ b/fitness.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,20 +8,15 @@
     <link rel="stylesheet" href="css/dark-mode.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/23a7e280be.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <img src="images/logo_snack_it.png" alt="">
+                 <img src="images/logo_snack_it.png" alt="">
             </div>
             <nav>
                 <button class="mobile-menu-btn">
@@ -31,17 +25,13 @@
                     <span></span>
                 </button>
                 <ul class="menu">
-                    <form method="GET" action="Buscar_PHP/buscar.php">
-                        <button class="btn-search" type="submit">Buscar</button>
-                        <input type="text" name="q" placeholder="Buscar receita" required>
 
-                    </form>
 
-                    <li><a href="filmes-series.html">Filmes & Séries</a></li>
+                     <li><a href="filmes-series.html">Filmes & Séries</a></li>
                     <li><a href="veganas.html">Veganas</a></li>
                     <li><a href="fitness.html">Fitness</a></li>
                     <li><a href="originais.html">Originais</a></li>
-                    <li><a href="sobre.html"><i class="fa-solid fa-question"></i></a></li>
+                    <li><a href="sobre.html"><i class="fa-solid fa-question"></i></a></li> 
                     <li><a href="index.html" class="active"><i class="fa-solid fa-house"></i></a></li>
                     <li><a href="login.html" class="active"><i class="fa-solid fa-user"></i></a></li>
                 </ul>
@@ -56,144 +46,139 @@
         </div>
     </section>
 
-    <div class="recipes">
-        <section class="recipes-grid">
-            <div class="container">
-                <div class="recipe-card" id="hamburguer-salmao">
-                    <div class="recipe-img" style="background-image: url('images/strogonoff-fitness.webp');"></div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Rico em Proteínas</span>
-                        <h3>Strogonoff com batata-doce</h3>
-                        <p>Essa receita deliciosa leva iogurte natural no lugar do creme de leite</p>
-                        <a href="strogonoff-fit-batata-doce.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
-                </div>
-
-                <div class="recipe-card">
-                    <div class="recipe-img" style="background-image: url('images/omelette.jpg');"></div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Rico em Proteínas</span>
-                        <h3>Omelete rápido</h3>
-                        <p>Uma refeição simples, leve e prática, perfeita para qualquer hora do dia.</p>
-                        <a href="omelete-rapido-fit.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
-                </div>
-
-                <div class="recipe-card">
-                    <div class="recipe-img" style="background-image: url('images/quibe-abobora.png');"></div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Proteína Vegetal</span>
-                        <h3>Quibe de Abóbora</h3>
-                        <p>Versão leve e vegetariana do quibe tradicional, feita com abóbora e trigo.</p>
-                        <a href="quibe.abobora-fit.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
-                </div>
-
-                <div class="recipe-card">
-                    <div class="recipe-img" style="background-image: url('images/pao-de-queijo-inhame.jpg');"></div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Rico em Fibras</span>
-                        <h3>Pão de Queijo de Inhame</h3>
-                        <p>Uma opção saudável e sem glúten, feita com inhame e polvilho.</p>
-                        <a href="pao-de-queijo-inhame-fit.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
-                </div>
-
-                <div class="recipe-card">
-                    <div class="recipe-img"
-                        style="background-image: url('images/espaguete-de-abobrinha-principal.webp');"></div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Refeição Prática</span>
-                        <h3>Espaguete de Abobrinha Fácil</h3>
-                        <p>Uma alternativa leve ao macarrão tradicional, feita com abobrinha.</p>
-                        <a href="espaguete-abobrinha-fit.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
-                </div>
-
-                <div class="recipe-card">
-                    <div class="recipe-img" style="background-image: url('images/almondega-grao-de-bico.jfif');"></div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Refeição Leve</span>
-                        <h3>Almôndega de Grão-de-Bico</h3>
-                        <p>Rica em proteína vegetal, é uma ótima opção para substituir carne.</p>
-                        <a href="almondega-grao-de-bico.-fit.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
+<div class="recipes">
+    <section class="recipes-grid">
+        <div class="container">
+            <div class="recipe-card" id="hamburguer-salmao">
+                <div class="recipe-img" style="background-image: url('images/strogonoff-fitness.webp');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Rico em Proteínas</span>
+                    <h3>Strogonoff com batata-doce</h3>
+                    <p>Essa receita deliciosa leva iogurte natural no lugar do creme de leite</p>
+                    <a href="strogonoff-fit-batata-doce.html" class="btn-text">Ver Receita Completa</a>
                 </div>
             </div>
-        </section>
 
-        <section class="recipes-grid">
-            <div class="container">
-                <div class="recipe-card" id="hamburguer-salmao">
-                    <div class="recipe-img" style="background-image: url('images/peito-de-frango-arroz.png');"></div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Rico em Proteínas</span>
-                        <h3>Peito de frango com brócolis e arroz integral</h3>
-                        <p>Refeição equilibrada e funcional, perfeita para quem busca definição muscular.</p>
-                        <a href="peito-de-frango-fitness.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
-                </div>
-
-                <div class="recipe-card">
-                    <div class="recipe-img"
-                        style="background-image: url('images/ceviche-de-tilapia-portal-minha-receita-1200x480.webp');">
-                    </div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Snack Saudável</span>
-                        <h3>Ceviche de tilápia</h3>
-                        <p>Fresco e leve, esse prato é rico em proteína e baixo em calorias.</p>
-                        <a href="ceviche-tilapia-fit.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
-                </div>
-
-                <div class="recipe-card">
-                    <div class="recipe-img" style="background-image: url('images/hamburguer-frango-fitness.jpg');">
-                    </div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Proteína Vegetal</span>
-                        <h3>Hambúrguer de frango com abobrinha</h3>
-                        <p>Alternativa saudável ao hambúrguer tradicional, com mais fibras e menos gordura.</p>
-                        <a href="hamburguer-frango-abobrinha-fit.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
-                </div>
-
-                <div class="recipe-card">
-                    <div class="recipe-img" style="background-image: url('images/tapioca-frango.webp');"></div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Refeição Prática</span>
-                        <h3>Tapioca de frango e queijo</h3>
-                        <p>Lanche rápido e cheio de sabor com baixo teor de glúten.</p>
-                        <a href="tapioca-frango-queijo-fit.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
-                </div>
-
-                <div class="recipe-card">
-                    <div class="recipe-img"
-                        style="background-image: url('images/Torta-de-batata-doce-com-frango.jpg');"></div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Refeição Completa</span>
-                        <h3>Torta de Frango com Batata-doce</h3>
-                        <p>Uma refeição completa que combina proteínas e carboidratos complexos.</p>
-                        <a href="torta-frango-batata-doce-fit.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
-                </div>
-
-                <div class="recipe-card">
-                    <div class="recipe-img" style="background-image: url('images/frango-com-quinoa.jpg');"></div>
-                    <div class="recipe-content">
-                        <span class="recipe-category">Pós-treino</span>
-                        <h3>Frango Grelhado com Quinoa</h3>
-                        <p>Combinação perfeita de proteínas e carboidratos para recuperação muscular.</p>
-                        <a href="frango-grelhado-quinoa-fit.html" class="btn-text">Ver Receita Completa</a>
-                    </div>
+            <div class="recipe-card">
+                <div class="recipe-img" style="background-image: url('images/omelette.jpg');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Rico em Proteínas</span>
+                    <h3>Omelete rápido</h3>
+                    <p>Uma refeição simples, leve e prática, perfeita para qualquer hora do dia.</p>
+                    <a href="omelete-rapido-fit.html" class="btn-text">Ver Receita Completa</a>
                 </div>
             </div>
-        </section>
-    </div>
+
+            <div class="recipe-card">
+                <div class="recipe-img" style="background-image: url('images/quibe-abobora.png');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Proteína Vegetal</span>
+                    <h3>Quibe de Abóbora</h3>
+                    <p>Versão leve e vegetariana do quibe tradicional, feita com abóbora e trigo.</p>
+                    <a href="quibe.abobora-fit.html" class="btn-text">Ver Receita Completa</a>
+                </div>
+            </div>
+
+            <div class="recipe-card">
+                <div class="recipe-img" style="background-image: url('images/pao-de-queijo-inhame.jpg');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Rico em Fibras</span>
+                    <h3>Pão de Queijo de Inhame</h3>
+                    <p>Uma opção saudável e sem glúten, feita com inhame e polvilho.</p>
+                    <a href="pao-de-queijo-inhame-fit.html" class="btn-text">Ver Receita Completa</a>
+                </div>
+            </div>
+
+            <div class="recipe-card">
+                <div class="recipe-img" style="background-image: url('images/espaguete-de-abobrinha-principal.webp');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Refeição Prática</span>
+                    <h3>Espaguete de Abobrinha Fácil</h3>
+                    <p>Uma alternativa leve ao macarrão tradicional, feita com abobrinha.</p>
+                    <a href="espaguete-abobrinha-fit.html" class="btn-text">Ver Receita Completa</a>
+                </div>
+            </div>
+
+            <div class="recipe-card">
+                <div class="recipe-img" style="background-image: url('images/almondega-grao-de-bico.jfif');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Refeição Leve</span>
+                    <h3>Almôndega de Grão-de-Bico</h3>
+                    <p>Rica em proteína vegetal, é uma ótima opção para substituir carne.</p>
+                    <a href="almondega-grao-de-bico.-fit.html" class="btn-text">Ver Receita Completa</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="recipes-grid">
+        <div class="container">
+            <div class="recipe-card" id="hamburguer-salmao">
+                <div class="recipe-img" style="background-image: url('images/peito-de-frango-arroz.png');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Rico em Proteínas</span>
+                    <h3>Peito de frango com brócolis e arroz integral</h3>
+                    <p>Refeição equilibrada e funcional, perfeita para quem busca definição muscular.</p>
+                    <a href="peito-de-frango-fitness.html" class="btn-text">Ver Receita Completa</a>
+                </div>
+            </div>
+
+            <div class="recipe-card">
+                <div class="recipe-img" style="background-image: url('images/ceviche-de-tilapia-portal-minha-receita-1200x480.webp');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Snack Saudável</span>
+                    <h3>Ceviche de tilápia</h3>
+                    <p>Fresco e leve, esse prato é rico em proteína e baixo em calorias.</p>
+                    <a href="ceviche-tilapia-fit.html" class="btn-text">Ver Receita Completa</a>
+                </div>
+            </div>
+
+            <div class="recipe-card">
+                <div class="recipe-img" style="background-image: url('images/hamburguer-frango-fitness.jpg');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Proteína Vegetal</span>
+                    <h3>Hambúrguer de frango com abobrinha</h3>
+                    <p>Alternativa saudável ao hambúrguer tradicional, com mais fibras e menos gordura.</p>
+                    <a href="hamburguer-frango-abobrinha-fit.html" class="btn-text">Ver Receita Completa</a>
+                </div>
+            </div>
+
+            <div class="recipe-card">
+                <div class="recipe-img" style="background-image: url('images/tapioca-frango.webp');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Refeição Prática</span>
+                    <h3>Tapioca de frango e queijo</h3>
+                    <p>Lanche rápido e cheio de sabor com baixo teor de glúten.</p>
+                    <a href="tapioca-frango-queijo-fit.html" class="btn-text">Ver Receita Completa</a>
+                </div>
+            </div>
+
+            <div class="recipe-card">
+                <div class="recipe-img" style="background-image: url('images/Torta-de-batata-doce-com-frango.jpg');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Refeição Completa</span>
+                    <h3>Torta de Frango com Batata-doce</h3>
+                    <p>Uma refeição completa que combina proteínas e carboidratos complexos.</p>
+                    <a href="torta-frango-batata-doce-fit.html" class="btn-text">Ver Receita Completa</a>
+                </div>
+            </div>
+
+            <div class="recipe-card">
+                <div class="recipe-img" style="background-image: url('images/frango-com-quinoa.jpg');"></div>
+                <div class="recipe-content">
+                    <span class="recipe-category">Pós-treino</span>
+                    <h3>Frango Grelhado com Quinoa</h3>
+                    <p>Combinação perfeita de proteínas e carboidratos para recuperação muscular.</p>
+                    <a href="frango-grelhado-quinoa-fit.html" class="btn-text">Ver Receita Completa</a>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
 
 
 
-
+ 
 
     <footer>
         <div class="container">
@@ -231,5 +216,4 @@
     <script src="js/script.js"></script>
     <script src="js/dark-mode.js"></script>
 </body>
-
 </html>
